add post-ingestion report alerts
