# docs/swagger.yaml
@@ -23,6 +23,12 @@ definitions:
         type: number
       baseline:
         type: number
+      category:
+        type: string
+      compartment_id:
+        type: string
+      compartment_name:
+        type: string
       date:
         type: string
       moving_average_delta:
@@ -31,6 +37,8 @@ definitions:
         type: number
       provider:
         $ref: '#/definitions/github_com_crypticani_cloudpulse_internal_domain.Provider'
+      region:
+        type: string
       service:
         type: string
       severity:
